--- a/views/admin_balloons.jade
+++ b/views/admin_balloons.jade
@@ -7,7 +7,7 @@ html
     link(rel="stylesheet", href="/stylesheets/bootstrap-theme.min.css")
     link(rel="stylesheet", href="/stylesheets/bootstrap-sortable.css")
     
-    script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
+    script(src="/javascript/jquery-1.7.2.min.js")
     // script(src="/javascript/jquery.tablecloth.js")
     // script(src="/javascript/jquery.tablesorter.min.js")
     // script(src="/javascript/jquery-dateFormat.min.js")
@@ -23,9 +23,13 @@ html
       thead
         th color
         th name
+        th details
         th message
         //- th email
         th(data-defaultsort="desc") creation date
+        th last update
+        th history length
+        th distance traveled
         th link
       tbody
         each b in balloons
@@ -33,8 +37,13 @@ html
             td
               div(style="width:20px; height:20px; background:#{b.color}")
             td= b.name
+            td
+              a(href='/admin/balloon/#{b.linkID}') details
             td= b.message
             //- td= b.email
             td #{b.d} (#{b.d2})
+            td #{b.lastUpdate} (#{b.lastUpdateFromNow})
+            td #{b.historyLength}
+            td(data-value="#{b.distance}") #{b.distance} km
             td
               a(href='/##{b.linkID}') link
